--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static '/css/normalize.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}">
+    <script src="{% static '/js/jquery-1.12.4.min.js' %}"></script>
     <script src="{% static '/js/bootstrap.min.js' %}"></script>
-    <script src="/{% static '/js/jquery-1.12.4.min.js' %}"></script>
 </head>
 <body>
     {% include "header.html" %}
