--- a/templates/blog/titles.html
+++ b/templates/blog/titles.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}blog titles{% endblock %}
+{% block title %}Blog Titles{% endblock %}
 {% block content %}
 <div class="row text-center vertical-middle-sm">
     <h1>
