--- a/templates/header.html
+++ b/templates/header.html
@@ -20,13 +20,29 @@
             <li><a href="#">随笔</a></li>
             <li><a href="#">动态</a></li>
         </ul>
-        <form class="navbar-form navbar-right" role="search">
+        <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="搜索关键字">
             </div>
             <button type="submit" class="btn btn-default">搜索</button>
         </form>
+        <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'account:user_login' %}">登录</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">设置</a></li>
+                        <li><a href="#">空间</a></li>
+                    </ul>
+                </li>
+            </ul>
     </div><!-- /.navbar-collapse -->
 </nav>
 
 </div>
+
+
+
+
+
+
