--- a/templates/header.html
+++ b/templates/header.html
@@ -27,14 +27,19 @@
             <button type="submit" class="btn btn-default">搜索</button>
         </form>
         <ul class="nav navbar-nav navbar-right">
-                <li><a href="{% url 'account:user_login' %}">登录</a></li>
-                <li class="dropdown">
+                {% if user.is_authenticated %}
+                    <li><a href="#">{{ user.username }}</a></li>
+                    <li><a href="{% url 'account:user_logout' %}">登出</a></li>
+                {% else %}
+                    <li><a href="{% url 'account:user_login' %}">登录</a></li>
+                {% endif %}
+                <!-- <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">设置</a></li>
                         <li><a href="#">空间</a></li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
     </div><!-- /.navbar-collapse -->
 </nav>
