--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
     <p>
         输入你的用户名和密码
     </p>
-    <form class="form-horizontal" action="." method="post">
+    <form class="form-horizontal" action="{% url 'account:user_login' %}" method="post">
         {% csrf_token %}
         <!-- {{ form.as_p }} -->
         <div class="form-group">
