--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -3,6 +3,6 @@
 {% block content %}
 <div class="row text-center vertical-middle-sm">
     <p>你已经登出</p>
-    <p>你可以再次<a href="{% url 'account:user_login' %}">登录</a></p>
+    <p>你可以再次<strong><a href="{% url 'account:user_login' %}">登录</a></strong></p>
 </div>
 {% endblock %}
