--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -47,6 +47,24 @@
                     {{ form.password2 }}
                 </div>
         </div>
+        <div class="form-group">
+            <label for="{{ profile.birth.id_for_label }}" class="col-md-5 control-label">
+                <span class="glyphicon glyphicon-calendar"></span>
+                出生日期
+            </label>
+            <div class="col-md-6 text-left">
+                {{ profile.birth }}
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="{{ profile.phone.id_for_label }}" class="col-md-5 control-label">
+                <span class="glyphicon glyphicon-phone"></span>
+                手机号
+            </label>
+            <div class="col-md-6 text-left">
+                {{ profile.phone }}
+            </div>
+        </div>
         <input type="submit" class="bnt bnt-primary bnt-lg" value="注册">
     </form>
 </div>
