--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -65,7 +65,7 @@
                 {{ profile.phone }}
             </div>
         </div>
-        <input type="submit" class="bnt bnt-primary bnt-lg" value="注册">
+        <input type="submit" class="btn btn-primary btn-lg" value="注册">
     </form>
 </div>
 {% endblock %}
