--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -29,7 +29,10 @@
                 {{ form.password }}
             </div>
         </div>
-        <input type="submit" class="bnt bnt-primary bnt-lg" value="登录">
+        <p class="text-muted">
+                <a href="{% url 'account:password_reset' %}">忘记密码?</a>
+        </p>
+        <input type="submit" class="btn btn-primary btn-lg" value="登录">
     </form>
 </div>
 {% endblock %}
