--- a/templates/header.html
+++ b/templates/header.html
@@ -33,6 +33,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                                 <li><a href="{% url 'account:my_information' %}">个人信息</a></li>
+                                <li><a href="{% url 'article:article_column' %}">后台管理</a></li>
                                 <li><a href="{% url 'account:password_change' %}">修改密码</a></li>
                         </ul>
                     </li>
