--- a/templates/article/navigation.html
+++ b/templates/article/navigation.html
@@ -1,7 +1,9 @@
 <div class="bg-info">
-    <div class="text-center" style="margin-top: 5px">
+    <div class="text-center" style="margin-top: 5px;">
         <p>
-            <h4 href="{% url 'article:article_column' %}">栏目管理</h4>
+            <h4 style="padding: 5px"><a href="{% url 'article:article_column' %}">栏目管理</a></h4>
+            <h4 style="padding: 5px"><a href="{% url 'article:article_post' %}">发布文章</a></h4>
+            <h4 style="padding: 5px"><a href="{% url 'article:article_list' %}">文章列表</a></h4>
         </p>
     </div>
 </div>
