--- a/templates/article/base.html
+++ b/templates/article/base.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" type="text/css" href="{% static '/css/normalize.css' %}"> -->
     <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static '/js/editor/css/editormd.min.css' %}">
+    <link rel="stylesheet" href="{% static '/js/editor/css/style.css' %}">
     <!-- <script src="{% static '/js/jquery-1.12.4.min.js' %}"></script>
     <script src="{% static '/js/bootstrap.min.js' %}"></script> -->
 </head>
