--- a/templates/article/column/article_column.html
+++ b/templates/article/column/article_column.html
@@ -1,10 +1,10 @@
 {% extends "article/base.html" %}
 {% load staticfiles %}
-{% block title %}article column{% endblock %}
+{% block title %}Article Column{% endblock %}
 {% block content %}
 <div>
-    <p class="text-right">
-        <button id="add_column" onclick="add_column()" class="btn btn-primary">添加栏目</button>
+    <p class="text-right" style="height:50px;">
+        <button id="add_column" onclick="add_column()" style="background-color: #337ab7;" class="btn btn-primary">添加栏目</button>
     </p>
     <table class="table table-hover">
         <tr>
