--- a/templates/article/navigation.html
+++ b/templates/article/navigation.html
@@ -1,5 +1,5 @@
 <div class="bg-info">
-    <div class="text-center" style="margin-top: 5px;">
+    <div class="text-center" style="margin-top: 5px;padding: 1px;">
         <p>
             <h4 style="padding: 5px"><a href="{% url 'article:article_column' %}">栏目管理</a></h4>
             <h4 style="padding: 5px"><a href="{% url 'article:article_post' %}">发布文章</a></h4>
