--- a/static/js/editor/css/article.style.css
+++ b/static/js/editor/css/article.style.css
@@ -8,10 +8,10 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-		body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,hr,button,article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{
+		/* body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,hr,button,article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{
     margin: 0;
     padding: 0;
-}
+} */
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
     display: block;
@@ -47,13 +47,20 @@ ul, ol {
     clear: both;
 }
 
+html {
+    overflow-x: hidden;
+    overflow-y: auto;
+    }
+
 body {
     font-size: 14px;
     color: #666;
     font-family: "Microsoft YaHei", "微软雅黑", Helvetica, Tahoma, STXihei, "华文细黑", STHeiti, "Helvetica Neue", Helvetica, Tahoma, "Droid Sans", "wenquanyi micro hei", FreeSans, Arimo, Arial, SimSun, "宋体", Heiti, "黑体", sans-serif; 
     background: #fff;
     text-align: center;
+    width: 100vw;
 }
+
 
 #layout {
     text-align: left;
