--- a/templates/article/base.html
+++ b/templates/article/base.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="{% static '/css/normalize.css' %}"> -->
     <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static '/js/editor/css/editormd.min.css' %}">
-    <link rel="stylesheet" href="{% static '/js/editor/css/style.css' %}">
+    <link rel="stylesheet" href="{% static '/js/editor/css/article.style.css' %}">
     <!-- <script src="{% static '/js/jquery-1.12.4.min.js' %}"></script>
     <script src="{% static '/js/bootstrap.min.js' %}"></script> -->
 </head>
@@ -23,7 +23,7 @@
         {% block content %}
         {% endblock %}
     </div>
-    {% include "footer.html" %}
 </div>
+{% include "footer.html" %}
 </body>
 </html>
