--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,17 @@
 </<!DOCTYPE html>
 <html lang="zh-cn">
 <head>
+    <style>
+        html {
+            overflow-x: hidden;
+            overflow-y: auto;
+            }
+        body {
+        width: 100vw;
+        overflow: hidden;
+        padding-left: calc(100vw - 100%);
+        }
+    </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block title %}{% endblock %}</title>
