chapter3.4: list article(nologin)

--- a/templates/article/column/articles.html
+++ b/templates/article/column/articles.html
@@ -1,6 +1,6 @@
 {% extends "article/base.html" %}
 {% load staticfiles %}
-{% block title %}Article Column{% endblock %}
+{% block title %}Article List{% endblock %}
 {% block content %}
 <div>
     <table class="table table-hover">
