--- a/templates/article/column/redit_article.html
+++ b/templates/article/column/redit_article.html
@@ -1,6 +1,6 @@
 {% extends "article/base.html" %}
 {% load staticfiles %}
-{% block title %}Article Post{% endblock %}
+{% block title %}Edit Article{% endblock %}
 {% block content %}
 <div>
     <form class="form-horizontal" action="." method="post">
