--- a/templates/article/list/article_detail.html
+++ b/templates/article/list/article_detail.html
@@ -1,13 +1,18 @@
-{% extends "article/base.html" %}
+{% extends "base.html" %}
 {% load staticfiles %}
 {% block title %}Article Detail{% endblock %}
 {% block content %}
-<div>
-    <h1>{{ article.title }}</h1>
-    <p>{{ article.author }}</p>
-    <link rel="stylesheet" href="{% static 'js/editor/css/editormd.preview.css' %}">
-    <div id="editormd-view">
-        <textarea  id="append-text" style="display:none;">{{ article.body }}</textarea>
+<div class="container">
+    <div class="row text-center vertical-middle-sm">
+            <h1>{{ article.title }}</h1>
+            <p>{{ article.author }}</p>
+    </div>
+    <div class="col-md-3"></div>
+    <div class="col-md-9">
+        <link rel="stylesheet" href="{% static 'js/editor/css/editormd.preview.css' %}">
+        <div id="editormd-view">
+            <textarea  id="append-text" style="display:none;">{{ article.body }}</textarea>
+        </div>
     </div>
 </div>
 <script src="{% static 'js/jquery-1.11.1.min.js' %}"></script>
