--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         width: 100vw;
         overflow: hidden;
         padding-left: calc(100vw - 100%);
+        padding-bottom: 70px;
         }
     </style>
     <meta charset="utf-8">
