--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="navbar-fixed-bottom">
+<footer class="footer navbar-fixed-bottom">
     <div class="container">
             <hr>
             <p class="text-center">
