--- a/templates/header.html
+++ b/templates/header.html
@@ -16,9 +16,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">博客</a></li>
-            <li><a href="#">随笔</a></li>
-            <li><a href="#">动态</a></li>
+            <li class="active"><a href="{% url 'home' %}">首页</a></li>
+            <li><a href="#">博客</a></li>
+            <li><a href="{% url 'article:article_titles' %}">动态</a></li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
