--- a/templates/article/list/article_detail.html
+++ b/templates/article/list/article_detail.html
@@ -31,10 +31,40 @@
                 {% endfor %}
             </p>
         </div>
+        <hr>
+        <div>
+            <h4><span class="glyphicon glyphicon-comment"></span> 本文章有{{ article.articlepost_comment_articlepostid.count }}条评论</h4>
+            {% for comment in article.articlepost_comment_articlepostid.all %}
+            <div>
+                <p><strong>{{ comment.commentator }}</strong>说：</p>
+                <p style="margin-left: 20px">{{ comment.body }}</p>
+                <hr>
+            </div>
+            {% empty %}
+            <p>还没有评论</p>
+            {% endfor %}
+            <h4><span class="glyphicon glyphicon-bullhorn"></span> 发表你的评论</h4>
+            <form action="." method="post" class="form-horizontal" role="form">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">评论员</label>
+                    <div class="col-sm-10">{{ comment_form.commentator }}</div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">评论</label>
+                    <div class="col-sm-10">{{ comment_form.body }}</div>
+                </div>
+                <div class="text-center">
+                     <!-- <input type="submit" class="btn btn-primary btn-lg" value="提交评论">
+                     上面这个方法提交后不会清空表单，所以试一下用ajax提交，顺便测试csrf_token结合ajax提交 -->
+                     <input type="button" class="btn btn-primary btn-lg" value="提交评论" onclick="send_comment()">
+                </div>
+            </form>
+        </div>
     </div>
     <div class="col-md-4">
         <div class="row text-center vertical-middle-sm">
-           <p><h3>最受欢迎的文章</h3></p>
+           <p><h4>最受欢迎的文章</h4></p>
         </div>
         <ol style="margin-left:25%">
             {% for article_rank in most_viewed %}
@@ -56,6 +86,21 @@
 <script src="{% static 'js/editor/editormd.min.js' %}"></script>
 <script src="{% static 'js/layer/layer.js' %}"></script>
 <script>
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = jQuery.trim(cookies[i]);
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
     $(function(){
         editormd.markdownToHTML("editormd-view", {
             htmlDecode: "style, script, iframe",
@@ -82,6 +127,19 @@
                 }
             }
         });
+    }
+    function send_comment(){
+        var csrftoken = getCookie('csrftoken');
+        var commentator = $('#id_commentator').val()
+        var body = $('#id_body').val()
+        $.ajax({
+            url: ".",
+            type: "POST",
+            data: {"commentator": commentator, "body": body, "csrfmiddlewaretoken":csrftoken},
+            success: function () {
+                window.location.reload();
+            },
+        })
     }
 </script>
 {% endwith %}
