--- a/templates/article/list/article_titles.html
+++ b/templates/article/list/article_titles.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% load staticfiles %}
+{% load article_tags %}
 {% block title %}Article Titles{% endblock %}
 {% block content %}
 <div class="row text-center vertical-middle-sm">
     <h1>知识是人类进步的阶梯</h1>
+    <p class="text-muted">本站已有{% total_articles %}篇文章供您阅读</p>
 </div>
 
 <div class="container">
@@ -15,7 +17,8 @@
                     <h4 class="list-group-item-heading">{{ article.title }}</h4>
                 </a>
                 <p class="list-group-item-text">作者：<a href="{% url 'article:article_titles' article.author %}">{{ article.author }}</a></p>
-                <p class="list-group-item-text ">概要：<p class="text-muted">{{ article.body|slice:'50'|linebreaks}}</p></p>
+                <!-- <p class="list-group-item-text ">概要：<p class="text-muted">{{ article.body|slice:'50'|linebreaks}}</p></p> -->
+                <p class="list-group-item-text ">概要：<p class="text-muted">{{ article.body | slice:'100' | markdown }}</p></p>
             </div>
         {% endfor %}
     </div>
