--- a/templates/article/list/user_article_titles.html
+++ b/templates/article/list/user_article_titles.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load staticfiles %}
+{% load article_tags %}
 {% block title %}Article Titles{% endblock %}
 {% block content %}
 <div class="row text-center vertical-middle-sm">
@@ -14,7 +15,7 @@
                     <h4 class="list-group-item-heading">{{ article.title }}</h4>
                 </a>
                 <p class="list-group-item-text">作者：<a href="{% url 'article:article_titles' article.author %}">{{ article.author }}</a></p>
-                <p class="list-group-item-text ">概要：<p class="text-muted">{{ article.body|slice:'50'|linebreaks}}</p></p>
+                <p class="list-group-item-text ">概要：<p class="text-muted">{{ article.body | slice:'150' | markdown }}</p></p>
             </div>
         {% endfor %}
         <div class="text-center">
@@ -31,6 +32,7 @@
         </div>
         <div>
             <p>{{ user.username }}</p>
+            <p>该用户一共发表了{% author_total_articles user %}篇文章</p>
             {% if userinfo %}
                 <p>{{ userinfo.company }}</p>
                 <p>{{ userinfo.aboutme }}</p>
