chapter4.7: article tags

--- a/templates/account/password_change_done.html
+++ b/templates/account/password_change_done.html
@@ -2,7 +2,7 @@
 {% block title %}Password Change Done{% endblock %}
 
 {% block content %}
-<div class="row text-center vertical-moddle-sm">
+<div class="row text-center vertical-middle-sm">
     <p>
         密码更改成功
     </p>
