--- a/templates/article/navigation.html
+++ b/templates/article/navigation.html
@@ -4,6 +4,7 @@
             <h4 style="padding: 5px"><a href="{% url 'article:article_column' %}">栏目管理</a></h4>
             <h4 style="padding: 5px"><a href="{% url 'article:article_post' %}">发布文章</a></h4>
             <h4 style="padding: 5px"><a href="{% url 'article:article_list' %}">文章列表</a></h4>
+            <h4 style="padding: 5px"><a href="{% url 'article:article_tag' %}">文章标签</a></h4>
         </p>
     </div>
 </div>
