--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer navbar-fixed-bottom">
-    <div class="container">
-            <hr>
-            <p class="text-center">
-                2019 关于本站
-            </p>
+    <div class="container" style="height: 50px;;background-color: #f5f5f5;">
+        <hr style="margin-top: 0px">
+        <p class="text-center">
+            2019 关于本站
+        </p>
     </div>
 </footer>
